--- a/p6-aiir-scout.html
+++ b/p6-aiir-scout.html
@@ -350,6 +350,48 @@
             </div>
     </div>
     </section>
+    <div>
+        <a id="back-to-top" href="#">Top</a>
+      </div>
+      <script>
+        let btt = document.getElementById("back-to-top"),
+        docElem = document.documentElement,
+        offset,
+        scrollPos,
+        docHeight;
+  
+        docHeight = Math.max(docElem.scrollHeight, docElem.offsetHeight);
+        if(docHeight != 0){
+          offset = docHeight / 4;
+        }
+  
+        window.addEventListener("scroll",function(){
+          scrollPos = docElem.scrollTop;
+          console.log(scrollPos);
+          btt.className = scrollPos > offset ? "visible" : "";
+        })
+  
+        btt.addEventListener("click",function(ev){
+          ev.preventDefault();
+          scrollToTop();
+        })
+        function scrollToTop(){
+          //일정 시간 마다 할 일
+          //var scrollInterval  = setInterval(할일,시간);
+          //0.0015s = 15
+          //할일 = function(){실제로 할 일}
+          // 윈도우의 스크롤이 0이 아닐 때
+          //실제로 할 일 window.scrollBy(0,-55);
+          //스크롤이 0이면 setInterval 멈춰라 clearInterval(이름);
+          var scrollInterval  = setInterval(function(){
+            if(scrollPos != 0){
+              window.scrollBy(0,-55);
+            }else{
+              clearInterval(scrollInterval);
+            }
+          },15);
+        }
+      </script>
     <? include("footer.html"); ?>
 </section>
 </body>
